# Change Log
[ToLaserBlade (Fabric)](https://www.curseforge.com/minecraft/mc-mods/tolaserblade-fabric).
[Source](https://github.com/Iunius118/ToLaserBlade-Fabric).

## [Unreleased]
- Require Minecraft 1.21.9.
- Require Fabric Loader 0.17.2 and Fabric API 0.134.0+1.21.9.
- Require Cloth Config API 20.0.148.

## [9.1.0]
### Added
- Add configuration options to `tolaserblade.toml`:
  - `laserBladeBaseDamage` (float, 0.0-2046.0, default value is `6.0`).
  - `laserBladeBaseSpeed` (float, 0.8-2.8, default value is `2.8`).
  - `maxAttackDamageUpgradeCount` (integer, 0-2047, default value is `8`).
  - `attackDamageUpgradeMultiplier` (integer, 1-2048, default value is `1`).

### Changed
- Make base attack damage and base attack speed of laser blades configurable.
- Make maximum count and damage multiplier of attack damage upgrade configurable.

## [9.0.0]
- Require Minecraft 1.21.6.
- Require Fabric Loader 0.16.14 and Fabric API 0.127.1+1.21.6.
- Require Cloth Config API 19.0.147.

### Changed
- Port to 1.21.6.
- Change rendering of laser blades in GUI.

## [8.0.0]
### Changed
- Release version 8.0.0.

## [8.0.0-beta.2]
### Added
- Add boolean property `tolaserblade:blocking` to represent condition of laser blades.
- New sound events for use with `blocks_attacks` component:
  `tolaserblade:item.laser_blade.block` and `tolaserblade:item.laser_blade_fp.block`.

### Changed
- Change laser blade model and rendering to match `blocks_attacks` component.

### Fixed
- Fix subtractive rendering of laser blade.
- Fix laser blade item properties.

## [8.0.0-beta.1]
- Require Minecraft 1.21.5.
- Require Fabric Loader 0.16.13 and Fabric API 0.121.0+1.21.5.
- Require Cloth Config API 18.0.145.

### Changed
- Port to 1.21.5.

## [7.2.1]
### Fixed
- Modify default `assets/tolaserblade/sounds.json` to replace sound definitions.

## [7.2.0]
### Changed
- Adjust sound effects of laser blade.

## [7.1.0]
### Added
- New sound events: